--- a/client/src/Container/Admin/style.css
+++ b/client/src/Container/Admin/style.css
@@ -15,5 +15,29 @@
     border-width: 0px 0px 1px 0px;
     text-align: left;
 }
-
+.scrolllist{
+    height: 400px;
+    overflow: scroll;
+    overflow-x: hidden;
+    padding: 1%;
+}
+.videoList{
+    height: 100px;
+    overflow: scroll;
+    overflow-x: hidden;
+    padding: 1%;
+}
+ .scroll::-webkit-scrollbar {
+     width: 15px;
+ }
+ 
+ .scroll::-webkit-scrollbar-track {
+     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+     border-radius: 10px;
+ }
+ 
+ .scroll::-webkit-scrollbar-thumb {
+     border-radius: 10px;
+     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+ }
 
