--- a/client/src/Container/SpinnerPage/style.css
+++ b/client/src/Container/SpinnerPage/style.css
@@ -1,3 +1,7 @@
+body{
+  
+}
+
 .relative {
     position: relative;
     /* background-color: #cfc; */
@@ -7,6 +11,22 @@
   }
   #rel1 {
     top: 30px;
-    left:40%;
-    margin: 0px 50px 0px 50px;
+    left:55%;
+    width: 50%;
+    /* margin: 0px 50px 0px 50px; */
+  }
+  #canvas{
+    width:800px !important;
+  }
+
+  @media only screen and (max-width: 800px){
+    #canvas{
+        width:400px !important;
+    }
+  }
+
+  @media only screen and (max-width: 600px){
+    #canvas{
+        width:200px !important;
+    }
   }
