--- a/client/src/Container/SpinnerPage/style.css
+++ b/client/src/Container/SpinnerPage/style.css
@@ -16,17 +16,17 @@ body{
     /* margin: 0px 50px 0px 50px; */
   }
   #canvas{
-    width:800px !important;
+    width:250% !important;
   }
 
   @media only screen and (max-width: 800px){
     #canvas{
-        width:400px !important;
+        /* width:100% !important; */
     }
   }
 
-  @media only screen and (max-width: 600px){
+  /* @media only screen and (max-width: 600px){
     #canvas{
         width:200px !important;
     }
-  }
+  } */
