style changes on spinner page

--- a/client/src/Container/SpinnerPage/style.css
+++ b/client/src/Container/SpinnerPage/style.css
@@ -15,6 +15,11 @@ body{
     width: 50%;
     /* margin: 0px 50px 0px 50px; */
   }
+  iframe{
+    width:100%;
+    /* height: auto; */
+    box-shadow: 5px 5px 5px 1px;
+  }
   #canvas{
     width:250% !important;
   }
@@ -25,8 +30,10 @@ body{
     }
   }
 
-  /* @media only screen and (max-width: 600px){
+  @media only screen and (max-width: 600px){
     #canvas{
-        width:200px !important;
+        /* width:200px !important; */
+        width: 20%;
+
     }
-  } */
+  }
