--- a/client/src/Container/Home/style.css
+++ b/client/src/Container/Home/style.css
@@ -3,7 +3,7 @@
 }
 
 .setUser{
-    border-radius: 1px;
+    border-width: 5px;
     border-style: solid;
     border-color: dimgray;
     border-radius: 25px;
@@ -16,6 +16,7 @@
 }
 .setUserInput{
     width:100%;
+    text-align: center;
 }
 .errorState{
     color:red;
